поправила распределение ответственности